[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/ui/grimoire_hub_controller.gd" id="1"]
[ext_resource type="Shader" path="res://assets/shaders/aura_pulse.gdshader" id="2"]

[sub_resource type="ShaderMaterial" id="1"]
shader = ExtResource("2")
shader_parameter/aura_color = Color(0.8, 0.6, 0.2, 0.3)

[node name="GrimoireHub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.06, 0.04, 0.02, 1.0)

[node name="AuraOverlay" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
material = SubResource("1")
color = Color(0.8, 0.6, 0.2, 0.08)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 24

[node name="MainHBox" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="GrimoirePanel" type="PanelContainer" parent="MarginContainer/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GrimoireVBox" type="VBoxContainer" parent="MarginContainer/MainHBox/GrimoirePanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="MarginContainer/MainHBox/GrimoirePanel/GrimoireVBox"]
layout_mode = 2
text = "YOUR GRIMOIRE"
horizontal_alignment = 1

[node name="Sep1" type="HSeparator" parent="MarginContainer/MainHBox/GrimoirePanel/GrimoireVBox"]
layout_mode = 2

[node name="TrueNameLabel" type="Label" parent="MarginContainer/MainHBox/GrimoirePanel/GrimoireVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Vexithorn"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="MarginContainer/MainHBox/GrimoirePanel/GrimoireVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Level 1"
horizontal_alignment = 1

[node name="XPBar" type="ProgressBar" parent="MarginContainer/MainHBox/GrimoirePanel/GrimoireVBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 12)
max_value = 50.0
show_percentage = false

[node name="AlignmentLabel" type="Label" parent="MarginContainer/MainHBox/GrimoirePanel/GrimoireVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Primal (R:0 V:0 P:10)"
horizontal_alignment = 1

[node name="DeckCountLabel" type="Label" parent="MarginContainer/MainHBox/GrimoirePanel/GrimoireVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Deck: 8 / 20 cards"
horizontal_alignment = 1

[node name="Sep2" type="HSeparator" parent="MarginContainer/MainHBox/GrimoirePanel/GrimoireVBox"]
layout_mode = 2

[node name="LoreLabel" type="Label" parent="MarginContainer/MainHBox/GrimoirePanel/GrimoireVBox"]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 2
text = "Lore text..."

[node name="Sep3" type="HSeparator" parent="MarginContainer/MainHBox/GrimoirePanel/GrimoireVBox"]
layout_mode = 2

[node name="SeedRow" type="HBoxContainer" parent="MarginContainer/MainHBox/GrimoirePanel/GrimoireVBox"]
layout_mode = 2

[node name="SeedInput" type="LineEdit" parent="MarginContainer/MainHBox/GrimoirePanel/GrimoireVBox/SeedRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter seed (optional)"

[node name="NewGrimoireBtn" type="Button" parent="MarginContainer/MainHBox/GrimoirePanel/GrimoireVBox/SeedRow"]
unique_name_in_owner = true
layout_mode = 2
text = "New Grimoire"

[node name="ChapterPanel" type="PanelContainer" parent="MarginContainer/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChapterVBox" type="VBoxContainer" parent="MarginContainer/MainHBox/ChapterPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ArchivesLabel" type="Label" parent="MarginContainer/MainHBox/ChapterPanel/ChapterVBox"]
layout_mode = 2
text = "THE ARCHIVES"
horizontal_alignment = 1

[node name="Sep" type="HSeparator" parent="MarginContainer/MainHBox/ChapterPanel/ChapterVBox"]
layout_mode = 2

[node name="ChapterList" type="VBoxContainer" parent="MarginContainer/MainHBox/ChapterPanel/ChapterVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="SettingsBtn" type="Button" parent="MarginContainer/MainHBox/ChapterPanel/ChapterVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"
